--- a/package.json
+++ b/package.json
@@ -36,14 +36,14 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^4.2.3",
-    "@types/react-router-bootstrap": "^0.24.5",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.21",
-    "@types/node": "^12.20.6",
+    "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2"
+    "@types/react-dom": "^17.0.2",
+    "@types/react-router-bootstrap": "^0.24.5",
+    "typescript": "^4.2.3"
   }
 }
