--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sleepingtree.net",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
+  "proxy": "https://localhost:3001",
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -10,6 +10,7 @@
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "socket.io-client": "^4.0.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
