--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "https://localhost",
   "dependencies": {
     "react": "^17.0.1",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
