--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,19 +3,14 @@
   "name": "Sleepingtree's personal site",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "STree_favicon.ico",
+      "sizes": "any",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
+      "src": "STree_favicon.ico",
+      "type": "any",
       "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
     }
   ],
   "start_url": ".",
