--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "sleepingtree.net",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://api.sleepingtree.net",
+  "proxy": "https://localhost",
   "dependencies": {
     "react": "^17.0.1",
+    "react-app-rewired": "^2.2.1",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -13,11 +14,13 @@
     "semantic-ui-react": "^2.0.3",
     "socket.io-client": "^4.0.1",
     "universal-cookie": "^4.0.4",
+    "wasm": "file:../rust-ffmpg-wasm/pkg",
+    "wasm-loader": "^1.3.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
